# GraphLearning

./: .gitignore  ComputeEigenvectorsMBO.py  ComputeKNN.py  CreateLabelPermutation.py  LICENSE  MANIFEST.in  README.md  clustering_demo.py  directedgraphs_demo.py  download_data.py  generate_docs.sh  graphlearning.py  main.py  makefile  plot.py  pypi.txt  pyproject.toml  requirements.txt  semisupervised_demo.py  setup.py  table.py  yalefaces_labels.npz
Data/: FashionMNIST_labels.npz  WEBKB_labels.npz  cifar10_labels.npz  cifar_labels.npz  karate.pkl  signMNIST_labels.npz  yalefaces_labels.npz
LabelPermutations/: FashionMNISTModRate_permutations.npz  FashionMNISTMult1_permutations.npz  FashionMNISTMult2_permutations.npz  FashionMNISTMult3_permutations.npz  FashionMNISTMult4_permutations.npz  FashionMNISTMult5_permutations.npz  FashionMNIST_permutations.npz  MNISTModRate_permutations.npz  MNISTMult1_permutations.npz  MNISTMult2_permutations.npz  MNISTMult3_permutations.npz  MNISTMult4_permutations.npz  MNISTMult5_permutations.npz  MNIST_permutations.npz  MNISTnew_permutations.npz  WEBKB_permutations.npz  cifar10_permutations.npz  cifarModRate_permutations.npz  cifarMult1_permutations.npz  cifarMult2_permutations.npz  cifarMult3_permutations.npz  cifarMult4_permutations.npz  cifarMult5_permutations.npz  cifar_permutations.npz
ResultsFromPaper/: FashionMNISTModRate_vae_k10_centeredkernel_accuracy.csv  FashionMNISTModRate_vae_k10_laplace_accuracy.csv  FashionMNISTModRate_vae_k10_mbo_accuracy.csv  FashionMNISTModRate_vae_k10_modularitymbo_accuracy.csv  (+137 more)
c_code/: LICENSE.txt  (+21 more)
(+91 files in other folders)
