[build-system]
requires = ["setuptools","numpy"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ['graphlearning']


[project]
name = "graphlearning"
version = "1.7.0"
authors = [
  { name="Jeff Calder", email="jwcalder@umn.edu" },
]
description = "Python package for graph-based clustering and semi-supervised learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
dependencies = [
   'numpy', 
   'scipy', 
   'scikit-learn', 
   'matplotlib'
]

[project.urls]
"Homepage" = "https://github.com/jwcalder/GraphLearning"
"Bug Tracker" = "https://github.com/jwcalder/GraphLearning/issues"
